5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1846_1276.log
== TEST (2019-06-22 16:02:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:07:09) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:07:12) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(l):
	for j in range(c):
		z[i]=z[i]+n[i,j]

print(z)
-- EXECUTION TIME:
1.00362
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[28 21 42 16 47 41 21]
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
numero: [39 42 39 58 19 27 40 41 41]
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
numero: [45 30 28 37 26 40 40 47]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:12:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(6):
	z[i]=sum(m[:,i])
		
for p in range(6):
	z[p]=max(z)

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:12:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(l,dtype=int)

for i in range(c):
	z[i]=sum(m[:,i])
		
for p in range(c):
	z[p]=max(z)

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:12:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(m[:,i])
		
for p in range(c):
	z[p]=max(z)

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:13:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(m[:,i])
		
for p in range(c):
	z[p]=max(z)

print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:13:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	z[p]=max(z)

print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:14:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	z[p]=max(z)

print(p+1)
-- EXECUTION TIME:
1.02612
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
7
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
7
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 16:14:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	z[p]=max(z)
	print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:14:19) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	z[p]=max(z)
	print(p+1)
-- EXECUTION TIME:
1.61088
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
numero: 1
2
3
4
5
6
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:14:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	z[p]=max(z)
	print(p+1)
-- EXECUTION TIME:
2.32639
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
numero: 1
2
3
4
5
6
7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:14:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	z[p]=max(z)
	print(p+1)
-- EXECUTION TIME:
4.79647
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
1
2
3
4
5
6
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
numero: 1
2
3
4
5
6
7
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:14:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	if z[p]==max(z)
	print(p+1)
-- EXECUTION TIME:
0.771902
-- ERROR:
  File "/home/codebench/codes/1846/1276/main.py", line 12
    if z[p]==max(z)
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 16:15:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- EXECUTION TIME:
1.21052
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:07:08) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=7
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:07:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=7
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- EXECUTION TIME:
1.06552
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:07:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=z[i]=sum(n[:,i])
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- EXECUTION TIME:
1.18745
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1276/main.py", line 4, in <module>
    c=z[i]=sum(n[:,i])
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:08:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for j in range(c):
	z[i]=sum(n[:,j])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- EXECUTION TIME:
1.20025
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1276/main.py", line 9, in <module>
    z[i]=sum(n[:,j])
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 18:08:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for j in range(c):
	z[i]=sum(n[:,j])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:08:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for j in range(c):
	z[i]=sum(n[:,j])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- EXECUTION TIME:
1.25125
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1276/main.py", line 9, in <module>
    z[i]=sum(n[:,j])
NameError: name 'i' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:08:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- EXECUTION TIME:
0.925894
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
numero: 2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
numero: 3
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:09:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(n,dtype=int)

for i in range(c):
	z[i]=sum(n[:,i])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- EXECUTION TIME:
1.19501
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1276/main.py", line 6, in <module>
    z=zeros(n,dtype=int)
TypeError: only integer scalar arrays can be converted to a scalar index

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-25 18:11:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for j in range(c):
	z[j]=sum(n[:,j])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)
-- EXECUTION TIME:
1.12187
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:57:42) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	print(max(zeros))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:58:31) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	print(max(zeros[i]))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 15:59:02) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	print(max(zeros))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:03:20) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for i in range(shape(horas)[0]):
	if (zeros[i]==max(zeros):
	print(i+1)


-- ERROR:
File "XXXX", line 11
    if (zeros[i]==max(zeros):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:03:32) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros):
	print(i+1)


-- ERROR:
File "XXXX", line 11
    if (zeros[p]==max(zeros):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:03:53) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for i in range(shape(horas)[0]):
	if (zeros[i]==max(zeros)):
	print(i+1)


-- ERROR:
File "XXXX", line 12
    print(i+1)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:04:05) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for i in range(shape(horas)[0]):
	if (zeros[i]==max(zeros)):
		print(i+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:04:39) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for i in range(shape(horas)[0]):
	if (zeros[i]==max(zeros)):
		print(i+1)


-- EXECUTION TIME:
1.15093
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
5
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
4
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:05:01) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(i+1)


-- EXECUTION TIME:
1.04781
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
9
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
8
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:05:05) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(i+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:05:44) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- EXECUTION TIME:
1.05652
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
5
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
4
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:05:45) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:06:14) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[i,:])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- EXECUTION TIME:
1.02915
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
5
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
4
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:07:49) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- EXECUTION TIME:
0.92104
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1276/main.py", line 8, in <module>
    zeros[i]=sum(horas[:,j])
NameError: name 'j' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:08:03) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[:,i])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- EXECUTION TIME:
1.10512
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:08:12) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[:,i])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:08:29) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for i in range(shape(horas)[0]):
	zeros[i]=sum(horas[:,i])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- EXECUTION TIME:
1.19103
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:09:02) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- EXECUTION TIME:
1.62824
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
horas: 7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
horas:
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
horas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:09:03) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- EXECUTION TIME:
2.37613
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
horas: 7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
horas:
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
horas:
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:09:06) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:10:20) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:10:29) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- EXECUTION TIME:
1.15725
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:12:22) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:12:50) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for j in range(shape(horas)[0]):
	if (zeros[j]==max(zeros)):
		print(p+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:13:02) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for j in range(shape(horas)[0]):
	if (zeros[j]==max(zeros)):
		print(j+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:13:30) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for j in range(shape(horas)[0]):
	if (zeros[j]==max(zeros)):
		print(j+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:15:29) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for j in range(shape(horas)[0]):
	if (zeros[j]==max(zeros)):
		print(j+1)


-- EXECUTION TIME:
1.27042
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:16:18) 
-- CODE:
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for j in range(shape(horas)[0]):
	if (zeros[j]==max(zeros)):
		print(j+1)
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for j in range(c):
	z[j]=sum(n[:,j])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:18:09) 
-- CODE:
#este o programa nao aceita
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for j in range(shape(horas)[0]):
	if (zeros[j]==max(zeros)):
		print(j+1)

# esse o programa aceita
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for j in range(c):
	z[j]=sum(n[:,j])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:18:31) 
-- CODE:


# esse o programa aceita
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for j in range(c):
	z[j]=sum(n[:,j])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)


-- EXECUTION TIME:
0.996285
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:18:54) 
-- CODE:
#este o programa nao aceita
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for j in range(shape(horas)[0]):
	if (zeros[j]==max(zeros)):
		print(j+1)




-- EXECUTION TIME:
0.924466
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:20:50) 
-- CODE:
#este o programa nao aceita
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 16:20:57) 
-- CODE:
#este o programa nao aceita
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)




-- EXECUTION TIME:
1.06767
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:

-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 16:22:12) 
-- CODE:
#este o programa nao aceita
from  numpy import*
from numpy.linalg import*

horas=array(eval(input("horas: ")))
zeros=zeros(shape(horas)[0], dtype=int)

for j in range(shape(horas)[0]):
	zeros[j]=sum(horas[:,j])
	
for p in range(shape(horas)[0]):
	if (zeros[p]==max(zeros)):
		print(p+1)

# esse o programa aceita
from numpy import *
from numpy.linalg import *
n=array(eval(input("numero: ")))
c=shape(n)[1]
l=shape(n)[0]
z=zeros(7,dtype=int)

for j in range(c):
	z[j]=sum(n[:,j])
		
for p in range(c):
	if z[p]== max(z):
		print(p+1)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from  numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
